# TIDE_BACKEND

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  VALIDATION_REPORT.md  main.py  peek_pdf.py  pyproject.toml  results.md  run.md
data/: reference_tides_2026.csv  reference_tides_haldia_2026-06-01.csv
output/: forecast.csv  forecast_30days_diamond_harbour.csv  forecast_30days_haldia.csv  forecast_haldia_jan2025.csv  harmonic_constants_diamond_harbour.csv  harmonic_constants_haldia.csv  hindcast_haldia_dec2024.csv  lstm_summary.json  lstm_test_diamond_harbour.csv  lstm_test_haldia.csv  sample_forecast_haldia.csv  summary.json  validation_diamond_harbour.csv  validation_forecast_diamond_harbour_2023-02-01_to_2023-02-15.csv  validation_forecast_diamond_harbour_2023-03-01_to_2023-03-08.csv  validation_forecast_haldia_2024-06-01_to_2024-06-08.csv  validation_forecast_haldia_2024-09-01_to_2024-09-15.csv  validation_forecast_haldia_2024-12-01_to_2024-12-08.csv  validation_haldia.csv
output/lstm_models/: diamond_harbour.pt  haldia.pt
output/tide_report_haldia_2026-06-01/: error_metrics.json  hourly_water_levels.csv  predicted_tide_events.csv  tide_event_errors.csv  tide_frequency.csv
src/: constituents.py  datums.py  evaluate.py  extract_pdfs.py  extract_reference_events.py  forecast.py  forecast_combined.py  lsm.py  plot_lstm.py  plot_results.py  plot_validation.py  residual_lstm.py  summary_report.py  tide_report.py  train_predict.py  utide_event_model.py  validate_forecast.py
(+25 files in other folders)
