[project]
name = "tide-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pypdf>=6.12.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "utide>=0.3.1",
]

# Pull torch from the official CUDA 12.8 wheel index so we get the
# Blackwell-compatible (sm_120) build for the RTX 50-series.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
